# VOmatching

./: CMakeLists.txt  README.md  kitti00.yaml
cmake_modules/: FindG2O.cmake
inc/: utils.hpp  visualOdometry.hpp
myparam/: extrinsics.yml  intrinsics.yml
src/: bucket.cpp  feature.cpp  main.cpp  utils.cpp  visualOdometry.cpp
